fix: forçar visibilidade do botão parar registos nas abas por localização

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,10 @@ main.container-fluid {
     flex-shrink: 0;
 }
 
+.device-card .card-body {
+    flex-grow: 0 !important;
+}
+
 .device-card-body {
     display: flex;
     flex-direction: column;
